# dt501g-inlupp2

./: CMakeLists.txt  README.md  run.sh  svar.txt  task1.c  task2.c  task3.c  task4.c  task5.c  task6.c  task_1.c  task_10  task_10.c  task_11.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
img/: baboon.pgm  border.pgm  border_2.pgm  garvis.pgm  garvis_2.pgm  gator.pgm  gradient.pgm  gradient_2.pgm  gradient_thresh.pgm  mona_lisa_2.pgm  mona_lisa_thresh.pgm
