cmake_minimum_required(VERSION 3.5)

set(CMAKE_C_FLAGS "-Wall -std=c99 -g -O0")

project("inlupp2")

add_executable(task_1 task_1.c)
add_executable(task_2 task_2.c)
add_executable(task_3 task_3.c)
add_executable(task_4 task_4.c)
add_executable(task_5 task_5.c)
add_executable(task_6 task_6.c)
add_executable(task_7 task_7.c)
add_executable(task_8 task_8.c)
add_executable(task_9 task_9.c)
add_executable(task_10 task_10.c)
add_executable(task_11 task_11.c)
